--- a/certifying-app-js/package.json
+++ b/certifying-app-js/package.json
@@ -1,5 +1,6 @@
 {
   "name": "certifying-app-js",
+  "homepage": "https://hari-unnikrishnan.github.io/Service-Connect",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "perdeploy": "npm run build",
+    "deploy": "npx gh-pages -d dist "
   },
   "dependencies": {
     "react": "^19.1.1",
